force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/Initiative__c.object-meta.xml
<CustomObject>
    <description>A planning unit used within the Productivity Planning Suite (PPS) to manage target adjustments and report actuals to the Global Workforce Budget (GWB) system.</description>
    <label>Initiative</label>
    <nameField>
        <displayFormat>INI-{0000}</displayFormat>
        <label>Initiative Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>