force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <label>Approval Step</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>