force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver 1 for the Initiative.</description>
    <inlineHelpText>Approver 1 for the Initiative.</inlineHelpText>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>