force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver 2 of Initiative</description>
    <inlineHelpText>Approver 2 of Initiative</inlineHelpText>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives1</relationshipName>
    <type>Lookup</type>
</CustomField>