force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Approver 3 of Initiative</inlineHelpText>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives2</relationshipName>
    <type>Lookup</type>
</CustomField>