force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Current_Pending_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Pending_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Pending Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives4</relationshipName>
    <type>Lookup</type>
</CustomField>