force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Headcount_Type__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Type__c</fullName>
    <label>Headcount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Base_Supp</valueSetName>
    </valueSet>
</CustomField>