force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Logged_in_User_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User_for_Approval__c</fullName>
    <formula>Current_Pending_Approver__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in User for Approval</label>
    <type>Checkbox</type>
</CustomField>