force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Parent_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Parent_Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent initiative for containment hierarchy. Used to copy and lock plan functions on child initiatives.</description>
    <label>Parent Initiative</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>Child Initiatives</relationshipLabel>
    <relationshipName>Child_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>