force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Position_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Position_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Position Adjustment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>