force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Shop_Manager_View__c.field-meta.xml
<CustomField>
    <fullName>Shop_Manager_View__c</fullName>
    <label>Shop Manager View</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>