force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/fields/Total_Calculated_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Total_Calculated_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Calculated Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>