force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Initiative__c/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Effective_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date cannot be earlier to start date</errorMessage>
</ValidationRule>